fix list spacing

--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -69,6 +69,9 @@ main a {
         text-decoration: underline;
     }
 }
+main ul li {
+  padding: 5px 0;
+}
 table {
     margin: 0.3125em 0;
     th {
